# FuelPulse

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  pyproject.toml  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: fdd-feature.md  job-story.md  problem-story.md
.github/workflows/: build.yml  coverage.yml  linting.yml
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  DefaultProjectSettings.cmake  StaticAnalyzers.cmake  vcpkg-dependencies.cmake
docs/architecture/: Architecture.md  FuelModule.md
docs/architecture/adr/: 001.md  002.md  003.md  004.md  005.md  006.md
scripts/: coverage.py
src/: CMakeLists.txt
src/app/: Application.hpp  CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/analysis/: IAnalysis.hpp
src/lib/collection/: ICollector.hpp
src/lib/core/: CommandInterpreter.cpp  CommandInterpreter.hpp  CommandRegistry.cpp  CommandRegistry.hpp  EventBus.cpp  EventBus.hpp  Scheduler.hpp
src/lib/fuel/: Domain.hpp
src/lib/report/: IReport.hpp
src/lib/storage/: IRepository.hpp  IStorage.hpp
src/lib/utility/: Assert.hpp  LoggerFactory.cpp  LoggerFactory.hpp  StringOperations.hpp  Threading.hpp  ThreadingDetail.hpp
src/test/: CMakeLists.txt
src/test/core/: CommandInterpreterTest.cpp  CommandRegistryTest.cpp  EventBusTest.cpp  SchedulerTest.cpp
src/test/integration/: CoreIntegrationTest.cpp
src/test/testUtility/: ConcurrencyTest.cpp  ConcurrenyTest.cpp  ConcurrenyTest.hpp  RandomNumberGenerator.hpp
src/test/utility/: StringOperationsTest.cpp  ThreadingTest.cpp
